# ege_backend_projeckt

./: .env  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py  settings.py
app/api/administration/: schema.py  security.py
app/db/: base.py  connections.py  dependencies.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2bcc62a0d4fb_create_user_table.py
app/db/models/: __init__.py  user.py
app/db/repositories/: base.py  user_repositories.py
app/errors/: exception.py
app/service/: user_service.py
app/test/: utils.py
app/test/alembic/: conftest.py  test_migration.py
app/utils/: utils.py
