[project]
name = "ege-projeckt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
    "yarl>=1.20.1",
]
