[project]
name = "ege-projeckt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "fastapi>=0.117.1",
    "jose>=1.0.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "sqlalchemy[asyncio]>=2.0.43",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "yarl>=1.20.1",
]
